<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.android.hockeyscore.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#FFFFFF">

            <TextView
                style="@style/textTeams"
                android:text="@string/teamA"  />

            <ImageView
                android:layout_width="@dimen/width_image"
                android:layout_height="@dimen/height_image"
                android:src="@drawable/icehockey" />

            <TextView
                style="@style/textTeams"
                android:text="@string/teamB" />

        </LinearLayout>

        <View
            style="@style/hLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/scores"
                    android:text="@string/zero" />

                <Button
                    style="@style/button"
                    android:onClick="goalA"
                    android:text="@string/goal" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"   >

                    <TextView
                        style="@style/penaltiesText"
                        android:text="@string/penalties"  />

                    <TextView
                        android:id="@+id/team_a_penalty"
                        style="@style/penaltiesScore"
                        android:text="@string/zero" />

                </LinearLayout>

                <Button
                    style="@style/button"
                    android:onClick="add2forA"
                    android:text="@string/min2" />

                <Button
                    style="@style/button"
                    android:onClick="add5forA"
                    android:text="@string/min5" />

                <Button
                    style="@style/button"
                    android:onClick="add10forA"
                    android:text="@string/min10" />

            </LinearLayout>

            <View
                style="@style/vLine"/>

            <LinearLayout
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/scores"
                    android:text="@string/zero" />

                <Button
                    style="@style/button"
                    android:onClick="goalB"
                    android:text="@string/goal" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"   >

                    <TextView
                        style="@style/penaltiesText"
                        android:text="@string/penalties" />

                    <TextView
                        android:id="@+id/team_b_penalty"
                        style="@style/penaltiesScore"
                        android:text="@string/zero" />

                </LinearLayout>

                <Button
                    style="@style/button"
                    android:onClick="add2forB"
                    android:text="@string/min2" />

                <Button
                    style="@style/button"
                    android:onClick="add5forB"
                    android:text="@string/min5" />

                <Button
                    style="@style/button"
                    android:onClick="add10forB"
                    android:text="@string/min10" />

            </LinearLayout>

        </LinearLayout>

        <Button
            style="@style/resetButton"
            android:onClick="reset"
            android:text="@string/reset" />

    </LinearLayout>
</ScrollView>